Prevent overflow-x

--- a/style/about.sass
+++ b/style/about.sass
@@ -263,6 +263,7 @@ body.mobile
     margin-left: auto
     margin-right: auto
     display: inline-block
+    max-width: 100%
     > li
       text-align: left
       background-color: rgba(white, 0.6)
